changed from Materialize to Bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,235 +1,152 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
-
 /* Jisang custom */
+body {
+  padding-top: 50px;
+  text-decoration: none;
+  list-style: none;
+}
 nav {
-    position: fixed !important;
-    box-sizing: border-box;
-    transition: all 0.2s ease !important;
-    background-color: #1565c0 !important;
-    box-shadow: none !important;
-    z-index: 1000 !important;
-  }
-
-.side-nav {
-  z-index: 9999;
+  background: #3565af;
 }
-
-
-/* Form Colors */
-
-  /* label focus color */
-   .input-field input[class=validate]:focus + label {
-     color: #3565af;
-   }
-   .input-field textarea[class=materialize-textarea]:focus + label {
-     color: #3565af;
-   }
-  /* label underline focus color */
-   .input-field input[class=validate]:focus {
-     border-bottom: 1px solid #3565af;
-     box-shadow: 0 1px 0 0 #3565af;
-   }
-   .input-field textarea[class=materialize-textarea]:focus {
-     border-bottom: 1px solid #3565af;
-     box-shadow: 0 1px 0 0 #3565af;
-   }
-
-.btn-large:hover {
-  background-color: #5787cf !important;
-}
-
-.brand-logo {
-  line-height: 95px;
-}
-
-.brand-logo img {
-  width: 75px;
-}
-
-.sec_title {
+nav a {
   color: #fff;
-  text-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
-
-.section {
-  /*padding: 50px 0;*/
-  width: 100%;
+.brand-logo {
+  width: 50px;
 }
-
+.wrap h1 {
+  font-size: 40px;
+  font-weight: 500;
+}
+.wrap h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+.banner {
+  padding: 75px 0;
+}
 #index-banner {
-  height: 916px;
+  height: 880px;
+  background: url(/assets/img/background-macbookair.jpg) fixed;
+  background-size: cover;
 }
-
-#index-logo img {
-  width: 450px;
-  margin-top: 212px;
+#index-logo p {
+  text-align: center;
+  margin: 0 auto;
+}
+#index-logo p img {
+  display: inline-block;
+  width: 387px;
+  margin-top: 300px;
   margin-bottom: 30px;
 }
-
-#team-banner {
-  height: auto;
+#about-banner {
+  background-color: #313842;
+  color: #fff;
+  text-align: center;
 }
-
+#about-banner h3 {
+  color: #5787cf;
+  margin: 40px 0 18px;
+  line-height: 25px;
+}
+#about-banner p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #cccccc;
+  margin: 0 auto;
+}
+#team-banner {
+  text-align: center;
+}
+#team-banner h3 {
+  color: #3565af;
+  margin: 18px 0 40px;
+  line-height: 25px;
+}
 #service-banner {
-  height: auto;
+  background-color: #eeeeee;
+  text-align: center;
+}
+#service-banner p {
+  font-size: 21px;
+  line-height: 24px;
+  color: #333333;
+  margin: 20px 0;
+}
+#service-banner h3 {
+  color: #3565af;
+  margin: 18px 0 40px;
+  line-height: 25px;
 }
 
 #contact-banner {
-  height: auto;
+  text-align: center;
+}
+#contact-banner h3 {
+  color: #3565af;
+  margin: 18px 0 40px;
+  line-height: 25px;
+}
+#contact-banner form {
+  text-align: left;
+}
+#contact-banner form button {
+  text-align: right !important;
+}
+#map {
+  padding-left: 0;
+  height: 482px;
+}
+#map iframe {
+  width: 100%;
+  height: 100%;
+}
+#contactform {
+
 }
 
+footer {
+  background: #3565af;
+  color: #fff;
+  padding: 30px 0;
+}
+footer a {
+  color: #fff;
+}
+footer a:hover {
+  color: #fff;
+}
+footer ul {
+  list-style: none;
+}
+#top {
+  margin-top: 75px;
+}
 #footer-connect li {
   display: inline;
 }
-
-/* Original */
-
-nav ul a,
-nav .brand-logo {
-  color: #fff;
-}
-
-p {
-  line-height: 2rem;
-}
-
-.button-collapse {
-  color: #fff;
-}
-
-.parallax-container {
-  min-height: 88px; // Default is 380px
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-.parallax-container .section {
-  width: 100%;
-}
-
-.parallax-background {
-  width: 100%;
+#copyright {
+  text-align: center;
+  padding-top: 30px;
 }
 
 
-@media only screen and (min-width : 993px) {
-  .link_div {
-    padding-bottom: 20px;
-  }
-  nav {
-    position: fixed !important;
-    height: 80px !important;
-    line-height: 80px !important;
-    box-sizing: border-box;
-    transition: all 0.2s ease !important;
-    background-color: transparent !important;
-    box-shadow: none !important;
-    z-index: 1000 !important;
-  }
+/* 미디어 쿼리 */
 
-  .nav-small {
-    height: 64px !important;
-    line-height: 64px !important;
-    transition: all 0.2s ease !important;
-    background-color: #3565af !important;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
-  }
-
-  .nav-small-logo .brand-logo {
-    line-height: 80px !important;
-    transition: all 0.2s ease !important;
-  }
-
-  #team-banner {
-    height: auto;
-    padding-top: 50px;
-  }
-
-  #service-banner {
-    height: 365px;
-    padding-top: 50px;
-  }
-
-  #contact-banner {
-    height: auto;
-  }
-}
-
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    /*top: 40%;*/
-  }
-  nav {
-    height: 64px !important;
-    line-height: 64px !important;
-  }
-
-  .brand-logo {
-    line-height: 84px;
-  }
-
-  #index-banner {
-    height: 535px;
-  }
-
-  #index-logo img {
-    width: 330px;
-    margin-top: 80px;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  .link_div {
-    /*display: none;*/
-    /*padding: 0;*/
-  }
-  nav {
-    height: 54px !important;
-    line-height: 54px !important;
-  }
-  .brand-logo {
-    line-height: 65px;
-  }
-
-  .brand-logo img {
-    width: 55px;
-  }
-
-  #index-banner {
-    height: 575px;
-  }
-
-  /*#index-banner .section {
-    top: 0;
-  }*/
-
-  #index-logo img {
-    width: 250px;
-    margin-top: 120px;
-    margin-bottom: 20px;
-  }
-
+/* 가장 작은 기기들 */
+@media (max-width: @screen-xs-max) {
   #footer-company li {
-  display: inline;
-  padding-right: 20px;
+    display: inline-block;
   }
 }
 
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
+/* 작은 기기들 (태블릿, 768px 이상) */
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
 }
 
-footer.page-footer {
-  margin: 0;
+/* 중간 기기들 (데스크탑, 992px 이상) */
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
 }
+
+/* 큰 기기들 (큰 데스크탑, 1200px 이상) */
+@media (min-width: @screen-lg-min) { ... }
