--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,30 @@ body {
 nav {
   background: #3565af;
 }
-nav a {
+nav ul li a {
   color: #fff;
 }
+.navbar ul li a:hover {
+  background-color: #3565af !important;
+  color: #13439f;
+}
+.navbar ul li a:focus {
+  background-color: #3565af !important;
+  color: #13439f;
+}
+.navbar-nav li .dropdown-menu {
+  background: #3565af;
+}
+.navbar-nav li .dropdown-menu li a {
+  color: #fff;
+}
+.navbar-nav li .dropdown-menu li a:hover {
+  color: #13439f;
+}
+button.navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+
 .brand-logo {
   width: 50px;
 }
@@ -134,19 +155,51 @@ footer ul {
 /* 미디어 쿼리 */
 
 /* 가장 작은 기기들 */
-@media (max-width: @screen-xs-max) {
+@media (max-width: 768px) {
+  #index-banner {
+    height: 567px;
+    background-size: auto;
+  }
+  #index-logo p img {
+    width: 257px;
+    margin-top: 150px;
+    margin-bottom: 30px;
+  }
+  .banner {
+    padding: 50px 0;
+  }
+  #map {
+    padding: 0 0 25px 0;
+    height: 250px;
+  }
+  footer ul {
+    padding-left: 0;
+  }
+  footer ul li {
+    padding-right: 15px;
+  }
+  #footer-sec1 {
+    padding-bottom: 10px;
+  }
+  #footer-sec2 {
+    padding-bottom: 10px;
+  }
+  #footer-sec3 {
+
+  }
   #footer-company li {
-    display: inline-block;
+    display: inline;
   }
 }
 
 /* 작은 기기들 (태블릿, 768px 이상) */
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+@media (min-width: 768px) and (max-width: 992px) {
 }
 
 /* 중간 기기들 (데스크탑, 992px 이상) */
-@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+@media (min-width: 992px) and (max-width: 1200px) {
 }
 
 /* 큰 기기들 (큰 데스크탑, 1200px 이상) */
-@media (min-width: @screen-lg-min) { ... }
+@media (min-width: 1200px) {
+}
