--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ nav ul li a {
 .navbar-nav li .dropdown-menu li a:hover {
   color: #13439f;
 }
+button.navbar-toggle {
+  border: 1px solid #aaa;
+}
 button.navbar-toggle .icon-bar {
   background-color: #fff;
 }
@@ -141,7 +144,7 @@ footer ul {
   list-style: none;
 }
 #top {
-  margin-top: 75px;
+  margin-top: 50px;
 }
 #footer-connect li {
   display: inline;
@@ -156,6 +159,14 @@ footer ul {
 
 /* 가장 작은 기기들 */
 @media (max-width: 768px) {
+  .wrap h1 {
+    font-size: 32px;
+    font-weight: 500;
+  }
+  .wrap h3 {
+    font-size: 16px;
+    font-weight: 600;
+  }
   #index-banner {
     height: 567px;
     background-size: auto;
@@ -166,7 +177,7 @@ footer ul {
     margin-bottom: 30px;
   }
   .banner {
-    padding: 50px 0;
+    padding: 35px 0;
   }
   #map {
     padding: 0 0 25px 0;
@@ -194,6 +205,24 @@ footer ul {
 
 /* 작은 기기들 (태블릿, 768px 이상) */
 @media (min-width: 768px) and (max-width: 992px) {
+  footer ul {
+    padding-left: 0;
+  }
+  footer ul li {
+    padding-right: 15px;
+  }
+  #footer-sec1 {
+    padding-bottom: 10px;
+  }
+  #footer-sec2 {
+    padding-bottom: 10px;
+  }
+  #footer-sec3 {
+
+  }
+  #footer-company li {
+    display: inline;
+  }
 }
 
 /* 중간 기기들 (데스크탑, 992px 이상) */
